--- a/dede23.va666.com/index.htm
+++ b/dede23.va666.com/index.htm
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Maker|又一个创客源码演示站点！</title>
+<title>壹网平台|中小型企业服务领导者</title>
 <meta name="keywords" content="">
 <meta name="renderer" content="webkit">
 <meta name="description" content="创客云数字市场是一个主题模板/创意作品/数</br>字交易平台，你可以出售最优秀的网页模板</br>和平面设计作品！本站全部主题模板为100%</br>正品模板，支持更新升级！"><script type="text/javascript" src="jquery-1.js" tppabs="http://dede23.va666.com/jquery-1.js"></script>
@@ -272,8 +272,8 @@ cursor: pointer;
 							<dd><img src="22vd/images/img14.png" tppabs="http://dede23.va666.com/22vd/images/img14.png"></dd>
 						</dl>
 						<p class="desc">凭借专业的团队和多年的行业经验，</br>
-让产品自适应企业经营的互联网产品</br>
-并且让企业经营的产品达到高效</br>转化的利益盛宴</p>
+让产品自适应企业经营的互联网产品并且让企</br>
+业经营的产品达到高效转化的利益盛宴</p>
 					</div>
 					<div class="img">
 						<img src="22vd/images/img2-2.jpg" tppabs="http://dede23.va666.com/22vd/images/img2-2.jpg">
@@ -318,7 +318,6 @@ cursor: pointer;
 					</ul>
 				</div> -->
 				<dl class="sort">
-					<dt>view ALL</dt>
 					<dd id="hover1" class="ddHoverAfter" onClick="dh_select(1)">服务行业合集</dd>
 					<dd id="hover2" class="ddHover" onClick="dh_select(2)">优质案例合集</dd>
 				</dl>
@@ -326,27 +325,29 @@ cursor: pointer;
 			<div id="submenu1" class="body" style="display:block;">
 				<ul>
 					<li>
-						<a href="a/sheyingyishu/20160912/10.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/10.html" target="_blank">
+						<a href="a/sheyingyishu/anli/10.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/10.html" target="_blank">
 						<div class="img">
 							<img style="height: auto; border-radius: 3px; width: 100%;" src="22vd/images/dianshang.jpg" tppabs="http://dede23.va666.com/22vd/images/dianshang.jpg">
 						</div>
 						<div class="brand">
 							零售电商
+							<p>提供新零售线上化经营管理工具，只为让更多客户、多次到店消费,实现线上商城和线下门店的无缝融合</p>
 						</div>
 						</a>
 					</li>
 <li>
-						<a href="a/sheyingyishu/20160912/12.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/11.html" target="_blank">
+						<a href="a/sheyingyishu/anli/11.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/11.html" target="_blank">
 						<div class="img">
 							<img style="height: auto; border-radius: 3px; width: 100%;" src="22vd/images/meishi.jpg" tppabs="http://dede23.va666.com/22vd/images/meishi.jpg">
 						</div>
 						<div class="brand">
 							餐饮美食
+							<p>美食与生活的完美演绎，早餐/午餐/晚餐一键搞定</p>
 						</div>
 						</a>
 					</li>
 <li>
-						<a href="a/sheyingyishu/20160912/13.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/13.html" target="_blank">
+						<a href="a/sheyingyishu/anli/12.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/12.html" target="_blank">
 						<div class="img">
 							<img style="height: auto; border-radius: 3px; width: 100%;" src="22vd/images/fangchan.jpg" tppabs="http://dede23.va666.com/22vd/images/fangchan.jpg">
 						</div>
@@ -356,7 +357,7 @@ cursor: pointer;
 						</a>
 					</li>
 <li>
-						<a href="a/sheyingyishu/20160912/18.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/14.html" target="_blank">
+						<a href="a/sheyingyishu/anli/13.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/13.html" target="_blank">
 						<div class="img">
 							<img style="height: auto; border-radius: 3px; width: 100%;" src="22vd/images/jiaoyu.jpg" tppabs="http://dede23.va666.com/22vd/images/jiaoyu.jpg">
 						</div>
@@ -366,7 +367,7 @@ cursor: pointer;
 						</a>
 					</li>
 					<li>
-						<a href="a/sheyingyishu/20160912/10.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/15.html" target="_blank">
+						<a href="a/sheyingyishu/anli/14.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/14.html" target="_blank">
 							<div class="img">
 								<img style="height: auto; border-radius: 3px; width: 100%;" src="22vd/images/qiyeguanwang.jpg" tppabs="http://dede23.va666.com/22vd/images/qiyeguanwang.jpg">
 							</div>
@@ -376,7 +377,7 @@ cursor: pointer;
 						</a>
 					</li>
 					<li>
-						<a href="a/sheyingyishu/20160912/12.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/16.html" target="_blank">
+						<a href="a/sheyingyishu/anli/15.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/15.html" target="_blank">
 							<div class="img">
 								<img style="height: auto; border-radius: 3px; width: 100%;" src="22vd/images/jiudian.jpg" tppabs="http://dede23.va666.com/22vd/images/jiudian.jpg">
 							</div>
@@ -386,7 +387,7 @@ cursor: pointer;
 						</a>
 					</li>
 					<li>
-						<a href="a/sheyingyishu/20160912/13.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/17.html" target="_blank">
+						<a href="a/sheyingyishu/anli/16.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/16.html" target="_blank">
 							<div class="img">
 								<img style="height: auto; border-radius: 3px; width: 100%;" src="22vd/images/xianhua.jpg" tppabs="http://dede23.va666.com/22vd/images/xianhua.jpg">
 							</div>
@@ -396,7 +397,7 @@ cursor: pointer;
 						</a>
 					</li>
 					<li>
-						<a href="a/sheyingyishu/20160912/18.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/18.html" target="_blank">
+						<a href="a/sheyingyishu/anli/17.html" tppabs="http://dede23.va666.com/a/sheyingyishu/anli/17.html" target="_blank">
 							<div class="img">
 								<img style="height: auto; border-radius: 3px; width: 100%;" src="22vd/images/meiye.jpg" tppabs="http://dede23.va666.com/22vd/images/meiye.jpg">
 							</div>
@@ -409,7 +410,7 @@ cursor: pointer;
 						</a>
 					</li>
 				</ul>
-				<div class="moreList"><a href="a/chuangyimoban/index.htm" tppabs="http://dede23.va666.com/a/chuangyimoban/" target="_blank">更多</a></div>
+				<div class="moreList"><a href="a/chuangyimoban/index.htm" tppabs="http://dede23.va666.com/a/chuangyimoban/" target="_blank">更多>></a></div>
 			</div>
 			<div id="submenu2" class="body"  style="display:none;">
 				<ul>
@@ -474,7 +475,7 @@ cursor: pointer;
 						</a>
 					</li>
 				</ul>
-				<div class="moreList"><a href="a/jingxuananli/index.htm" tppabs="http://dede23.va666.com/a/jingxuananli/" target="_blank">更多</a></div>
+				<div class="moreList"><a href="a/jingxuananli/index.htm" tppabs="http://dede23.va666.com/a/jingxuananli/" target="_blank">更多>></a></div>
 			</div>
 		</div>
 	</div>
