--- a/dede23.va666.com/a/fangchanzhongjie/index.htm
+++ b/dede23.va666.com/a/fangchanzhongjie/index.htm
@@ -95,11 +95,11 @@
 			</li>
 
 			<li class="">
-				<a href="../xianhuasudi/index.htm" tppabs="http://dede23.va666.com/a/xianhuasudi/">鲜花速递</a>
+				<a href="../jiudianfuwu/index.htm" tppabs="http://dede23.va666.com/a/jiudianfuwu/">鲜花速递</a>
 			</li>
 
 			<li class="">
-				<a href="../meirongmeifa/index.htm" tppabs="http://dede23.va666.com/a/meirongmeifa/">美容美发</a>
+				<a href="../jiudianfuwu/index.htm" tppabs="http://dede23.va666.com/a/jiudianfuwu/">美容美发</a>
 			</li>
 
 		</ul>
