--- a/dede23.va666.com/a/jiudianfuwu/index.htm
+++ b/dede23.va666.com/a/jiudianfuwu/index.htm
@@ -7,14 +7,14 @@
 <meta name="description" content="">
 <meta name="baidu-site-verification" content="RBzbiIZZPU" />
 <link rel="icon" href="/images/favicon.ico">
-	<title>创意模板  /  服饰美容-Maker|又一个创客源码演示站点！</title>
+	<title>创意模板  /  教育医疗-Maker|又一个创客源码演示站点！</title>
 	<link href="../../templets/cloud_03/style/originality.css" tppabs="http://dede23.va666.com/templets/cloud_03/style/originality.css" rel="stylesheet">
 	<script type="text/javascript" src="../../templets/cloud_03/js/jquery1.7.js" tppabs="http://dede23.va666.com/templets/cloud_03/js/jquery1.7.js"></script>
 	<script type="text/javascript" src="../../templets/cloud_03/js/para.js" tppabs="http://dede23.va666.com/templets/cloud_03/js/para.js"></script>
 	<script type="text/javascript" src="../../templets/cloud_03/js/main.js" tppabs="http://dede23.va666.com/templets/cloud_03/js/main.js"></script>
 	<!--[if IE 8]>
-		<link href="css/ie8.css" tppabs="http://dede23.va666.com/a/fangchanzhongjie/css/ie8.css" rel="stylesheet">
-		<script src="js/background-size.js" tppabs="http://dede23.va666.com/a/fangchanzhongjie/js/background-size.js"></script>
+		<link href="css/ie8.css" tppabs="http://dede23.va666.com/a/jiudianfuwu/css/ie8.css" rel="stylesheet">
+		<script src="js/background-size.js" tppabs="http://dede23.va666.com/a/jiudianfuwu/js/background-size.js"></script>
 		<script src="../../../apps.bdimg.com/libs/respond.js/1.4.2/respond.min.js" tppabs="http://apps.bdimg.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<script src="../../../cdn.bootcss.com/selectivizr/1.0.2/selectivizr-min.js" tppabs="http://cdn.bootcss.com/selectivizr/1.0.2/selectivizr-min.js"></script>
 		<script src="../../../apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js" tppabs="http://apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js"></script>
@@ -38,7 +38,7 @@
     <ul>
       <li><a href="../../index.htm" tppabs="http://dede23.va666.com/" >首页</a></li>
       <li><a  href="../guanyuchuangke/index.htm" tppabs="http://dede23.va666.com/a/guanyuchuangke/" >解决方案</a></li>
-<li><a class='on' href="../fuwuhangye/index.htm" tppabs="http://dede23.va666.com/a/fuwuhangye/"  rel='dropmenu2'><span>服务行业</span></a></li>
+<li><a class='on' href="../" tppabs="http://dede23.va666.com/a/fuwuhangye/"  rel='dropmenu2'><span>创意模板</span></a></li>
       <li><a  href="../jingxuananli/index.htm" tppabs="http://dede23.va666.com/a/jingxuananli/" >精选案例</a></li>
     
       <li><a  href="../hezuojiameng/index.htm" tppabs="http://dede23.va666.com/a/hezuojiameng/" >合作加盟</a></li>
@@ -78,7 +78,7 @@
 				<a href="../canyinmeishi/index.htm" tppabs="http://dede23.va666.com/a/canyinmeishi/">餐饮美食</a>
 			</li>
 
-			<li class="on">
+			<li class="">
 				<a href="../fangchanzhongjie/index.htm" tppabs="http://dede23.va666.com/a/fangchanzhongjie/">房产中介</a>
 			</li>
 
@@ -90,7 +90,7 @@
 				<a href="../qiyeguanwang/index.htm" tppabs="http://dede23.va666.com/a/qiyeguanwang/">企业官网</a>
 			</li>
 
-			<li class="">
+			<li class="on">
 				<a href="../jiudianfuwu/index.htm" tppabs="http://dede23.va666.com/a/jiudianfuwu/">酒店服务</a>
 			</li>
 
