--- a/dede23.va666.com/a/zuixinzixun/index.htm
+++ b/dede23.va666.com/a/zuixinzixun/index.htm
@@ -39,7 +39,7 @@
     <ul>
       <li><a href="../../index.htm" tppabs="http://dede23.va666.com/" >首页</a></li>
 			<li><a  href="../guanyuchuangke/index.htm" tppabs="http://dede23.va666.com/a/guanyuchuangke/" >解决方案</a></li>
-      <li><a  href="../chuangyimoban/index.htm" tppabs="http://dede23.va666.com/a/chuangyimoban/"  rel='dropmenu2'>创意模板</a></li>
+      <li><a  href="../" tppabs="http://dede23.va666.com/a/fuwuhangye/"  rel='dropmenu2'>创意模板</a></li>
     
       <li><a  href="../jingxuananli/index.htm" tppabs="http://dede23.va666.com/a/jingxuananli/" >精选案例</a></li>
     
@@ -114,7 +114,7 @@
   <div class="links"><a href="../jingxuananli/index.htm" tppabs="http://dede23.va666.com/a/jingxuananli/">精选案例</a><a href="../hezuojiameng/index.htm" tppabs="http://dede23.va666.com/a/hezuojiameng/">合作加盟</a><a href="../guanyuchuangke/index.htm" tppabs="http://dede23.va666.com/a/guanyuchuangke/">关于创客</a> 
   </div>
 
-  <div class="links news"><a href="../sheyingyishu/index.htm" tppabs="http://dede23.va666.com/a/sheyingyishu/">摄影艺术</a><a href="../qiyejituan/index.htm" tppabs="http://dede23.va666.com/a/qiyejituan/">企业集团</a><a href="../xinwenboke/index.htm" tppabs="http://dede23.va666.com/a/xinwenboke/">新闻博客</a> 
+  <div class="links news"><a href="../lingshoudianshang/index.htm" tppabs="http://dede23.va666.com/a/lingshoudianshang/">摄影艺术</a><a href="../canyinmeishi/index.htm" tppabs="http://dede23.va666.com/a/canyinmeishi/">企业集团</a><a href="../xinwenboke/index.htm" tppabs="http://dede23.va666.com/a/xinwenboke/">新闻博客</a> 
 
   </div>
 
