--- a/dede23.va666.com/a/qiyejituan/index.htm
+++ b/dede23.va666.com/a/qiyejituan/index.htm
@@ -7,14 +7,14 @@
 <meta name="description" content="">
 <meta name="baidu-site-verification" content="RBzbiIZZPU" />
 <link rel="icon" href="/images/favicon.ico">
-	<title>创意模板  /  企业集团-Maker|又一个创客源码演示站点！</title>
+	<title>壹网平台</title>
 	<link href="../../templets/cloud_03/style/originality.css" tppabs="http://dede23.va666.com/templets/cloud_03/style/originality.css" rel="stylesheet">
 	<script type="text/javascript" src="../../templets/cloud_03/js/jquery1.7.js" tppabs="http://dede23.va666.com/templets/cloud_03/js/jquery1.7.js"></script>
 	<script type="text/javascript" src="../../templets/cloud_03/js/para.js" tppabs="http://dede23.va666.com/templets/cloud_03/js/para.js"></script>
 	<script type="text/javascript" src="../../templets/cloud_03/js/main.js" tppabs="http://dede23.va666.com/templets/cloud_03/js/main.js"></script>
 	<!--[if IE 8]>
-		<link href="css/ie8.css" tppabs="http://dede23.va666.com/a/qiyejituan/css/ie8.css" rel="stylesheet">
-		<script src="js/background-size.js" tppabs="http://dede23.va666.com/a/qiyejituan/js/background-size.js"></script>
+		<link href="css/ie8.css" tppabs="http://dede23.va666.com/a/canyinmeishi/css/ie8.css" rel="stylesheet">
+		<script src="js/background-size.js" tppabs="http://dede23.va666.com/a/canyinmeishi/js/background-size.js"></script>
 		<script src="../../../apps.bdimg.com/libs/respond.js/1.4.2/respond.min.js" tppabs="http://apps.bdimg.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<script src="../../../cdn.bootcss.com/selectivizr/1.0.2/selectivizr-min.js" tppabs="http://cdn.bootcss.com/selectivizr/1.0.2/selectivizr-min.js"></script>
 		<script src="../../../apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js" tppabs="http://apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js"></script>
@@ -38,7 +38,7 @@
     <ul>
 			<li><a href="../../index.htm" tppabs="http://dede23.va666.com/" >首页</a></li>
 			<li><a  href="../guanyuchuangke/index.htm" tppabs="http://dede23.va666.com/a/guanyuchuangke/" >解决方案</a></li>
-<li><a class='on' href="../chuangyimoban/index.htm" tppabs="http://dede23.va666.com/a/chuangyimoban/"  rel='dropmenu2'><span>创意模板</span></a></li>
+<li><a class='on' href="../" tppabs="http://dede23.va666.com/a/fuwuhangye/"  rel='dropmenu2'><span>创意模板</span></a></li>
       <li><a  href="../jingxuananli/index.htm" tppabs="http://dede23.va666.com/a/jingxuananli/" >精选案例</a></li>
     
       <li><a  href="../hezuojiameng/index.htm" tppabs="http://dede23.va666.com/a/hezuojiameng/" >合作加盟</a></li>
@@ -65,18 +65,42 @@
 
 	<!-- 筛选跟标题 -->
 	<section class="title">
-		<ul class="filter"><li class="on"><a href="../chuangyimoban/index.htm" tppabs="http://dede23.va666.com/a/chuangyimoban/">所有</a></li>
-		
-			<li class=""><a href="../sheyingyishu/index.htm" tppabs="http://dede23.va666.com/a/sheyingyishu/">摄影艺术</a></li>
-			<li class='on'><a href="index.htm" tppabs="http://dede23.va666.com/a/qiyejituan/" ><span>企业集团</span></a></li>
-			<li class=""><a href="../fushimeirong/index.htm" tppabs="http://dede23.va666.com/a/fushimeirong/">服饰美容</a></li>
-			
-			<li class=""><a href="../jianzhuzhuangshi/index.htm" tppabs="http://dede23.va666.com/a/jianzhuzhuangshi/">建筑装饰</a></li>
-			
-			<li class=""><a href="../lvyoucanyin/index.htm" tppabs="http://dede23.va666.com/a/lvyoucanyin/">旅游餐饮</a></li>
-			
-			<li class=""><a href="../jiaoyuyiliao/index.htm" tppabs="http://dede23.va666.com/a/jiaoyuyiliao/">教育医疗</a></li>
-			
+		<ul class="filter">
+			<li class="">
+				<a href="index.htm" tppabs="http://dede23.va666.com/a/fuwuhangye/">所有</a>
+			</li>
+
+			<li class="">
+				<a href="../lingshoudianshang/index.htm" tppabs="http://dede23.va666.com/a/lingshoudianshang/">零售电商</a>
+			</li>
+
+			<li class="on">
+				<a href="../canyinmeishi/index.htm" tppabs="http://dede23.va666.com/a/canyinmeishi/">餐饮美食</a>
+			</li>
+
+			<li class="">
+				<a href="../fangchanzhongjie/index.htm" tppabs="http://dede23.va666.com/a/fangchanzhongjie/">房产中介</a>
+			</li>
+
+			<li class="">
+				<a href="../jiaoyupeixun/index.htm" tppabs="http://dede23.va666.com/a/jiaoyupeixun/">教育培训</a>
+			</li>
+
+			<li class="">
+				<a href="../qiyeguanwang/index.htm" tppabs="http://dede23.va666.com/a/qiyeguanwang/">企业官网</a>
+			</li>
+
+			<li class="">
+				<a href="../jiudianfuwu/index.htm" tppabs="http://dede23.va666.com/a/jiudianfuwu/">酒店服务</a>
+			</li>
+
+			<li class="">
+				<a href="../xianhuasudi/index.htm" tppabs="http://dede23.va666.com/a/xianhuasudi/">鲜花速递</a>
+			</li>
+
+			<li class="">
+				<a href="../meirongmeifa/index.htm" tppabs="http://dede23.va666.com/a/meirongmeifa/">美容美发</a>
+			</li>
 		</ul>
 	</section>
 
@@ -86,7 +110,7 @@
 		
 		
 	<div class="box">
-			<a href="20160912/14.html" tppabs="http://dede23.va666.com/a/qiyejituan/20160912/14.html"></a>
+			<a href="20160912/14.html" tppabs="http://dede23.va666.com/a/canyinmeishi/20160912/14.html"></a>
 			<div>
 				<img src="../../22vd/images/intro_1448422017916_09a.jpg" tppabs="http://dede23.va666.com/22vd/images/intro_1448422017916_09a.jpg">
 				<span><em>H09A</em>科技风格的响应式外贸网</span>
@@ -103,7 +127,7 @@
   <div class="links"><a href="../jingxuananli/index.htm" tppabs="http://dede23.va666.com/a/jingxuananli/">精选案例</a><a href="../hezuojiameng/index.htm" tppabs="http://dede23.va666.com/a/hezuojiameng/">合作加盟</a><a href="../guanyuchuangke/index.htm" tppabs="http://dede23.va666.com/a/guanyuchuangke/">关于创客</a> 
   </div>
 
-  <div class="links news"><a href="../sheyingyishu/index.htm" tppabs="http://dede23.va666.com/a/sheyingyishu/">摄影艺术</a><a href="index.htm" tppabs="http://dede23.va666.com/a/qiyejituan/">企业集团</a><a href="../xinwenboke/index.htm" tppabs="http://dede23.va666.com/a/xinwenboke/">新闻博客</a> 
+  <div class="links news"><a href="../lingshoudianshang/index.htm" tppabs="http://dede23.va666.com/a/lingshoudianshang/">摄影艺术</a><a href="index.htm" tppabs="http://dede23.va666.com/a/canyinmeishi/">企业集团</a><a href="../xinwenboke/index.htm" tppabs="http://dede23.va666.com/a/xinwenboke/">新闻博客</a> 
 
   </div>
 
