--- a/dede23.va666.com/a/fuwuhangye/index.htm
+++ b/dede23.va666.com/a/fuwuhangye/index.htm
@@ -45,7 +45,7 @@
 					<a href="../../index.htm" tppabs="http://dede23.va666.com/">首页</a>
 				</li>
 				<li>
-					<a href="../guanyuchuangke/index.htm" tppabs="http://dede23.va666.com/a/guanyuchuangke/">解决方案</a>
+					<a href="../jiejuefangan/index.htm" tppabs="http://dede23.va666.com/a/jiejuefangan/">解决方案</a>
 				</li>
 				<li>
 					<a class='on' href="index.htm" tppabs="http://dede23.va666.com/a/fuwuhangye/" rel='dropmenu2'>
@@ -65,7 +65,7 @@
 				</li>
 
 				<li>
-					<a href="../guanyuchuangke/index.htm" tppabs="http://dede23.va666.com/a/guanyuchuangke/">关于我们</a>
+					<a href="../guanyuwomen/index.htm" tppabs="http://dede23.va666.com/a/guanyuwomen/">关于我们</a>
 				</li>
 			</ul>
 		</nav>
@@ -75,7 +75,6 @@
 			<p>专业的设计与维护:定制品牌形象、专业维护录入、高质量文案创意</p>
 			<p>一流的运营大咖:定制企业的运营策划、粉丝裂变性增长、交易额的快速提升</p>
 		</div>
-		<!-- <a target="_blank" class="houtai" href="#">管理后台操作体验</a> -->
 		<div style="background-position: 0% 0px;" data-parallax-background-inertia="0.3" class="bg_video"></div>
 
 
@@ -86,7 +85,7 @@
 	<section class="title">
 		<ul class="filter">
 			<li class="on">
-				<a href="index.htm" tppabs="http://dede23.va666.com/a/fuwuhangye/">所有</a>
+				<a href="../fuwuhangye/index.htm" tppabs="http://dede23.va666.com/a/fuwuhangye/">所有</a>
 			</li>
 
 			<li class="">
@@ -193,7 +192,7 @@
 		<div class="links">
 			<a href="../jingxuananli/index.htm" tppabs="http://dede23.va666.com/a/jingxuananli/">精选案例</a>
 			<a href="../hezuojiameng/index.htm" tppabs="http://dede23.va666.com/a/hezuojiameng/">合作加盟</a>
-			<a href="../guanyuchuangke/index.htm" tppabs="http://dede23.va666.com/a/guanyuchuangke/">关于创客</a>
+			<a href="../guanyuwomen/index.htm" tppabs="http://dede23.va666.com/a/guanyuwomen/">关于创客</a>
 		</div>
 
 		<div class="links news">
